--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-  padding: 0 5%;
+  /* padding: 0 5%; */
   border-radius: 8px;
 }
 
